@@ -2,7 +2,7 @@
 // This file was generated by the JavaTM Architecture for XML Binding(JAXB) Reference Implementation, v2.1.5-b01-fcs 
 // See <a href="http://java.sun.com/xml/jaxb">http://java.sun.com/xml/jaxb</a> 
 // Any modifications to this file will be lost upon re-compilation of the source schema. 
-// Generated on: 2009.11.15 at 10:25:53 AM MEZ 
+// Generated on: 2020.04.10 at 03:08:50 PM MESZ 
 //
 
 package gde.device;
@@ -33,6 +33,7 @@ import javax.xml.bind.annotation.XmlType;
  *       &lt;attribute name="sigma" use="required" type="{http://www.w3.org/2001/XMLSchema}boolean" />
  *       &lt;attribute name="triggerRefOrdinal" type="{http://www.w3.org/2001/XMLSchema}integer" />
  *       &lt;attribute name="sumByTriggerRefOrdinal" type="{http://www.w3.org/2001/XMLSchema}integer" />
+ *       &lt;attribute name="sumBySecondaryTriggerRefOrdinal" type="{http://www.w3.org/2001/XMLSchema}integer" />
  *       &lt;attribute name="integrateByTrigger" type="{http://www.w3.org/2001/XMLSchema}boolean" />
  *       &lt;attribute name="sumTriggerText" type="{http://www.w3.org/2001/XMLSchema}string" />
  *       &lt;attribute name="countByTrigger" type="{http://www.w3.org/2001/XMLSchema}boolean" />
@@ -489,6 +490,7 @@ public class StatisticsType implements Cloneable {
 		sb.append(String.format("statistics min=%b max=%b avg=%b sigma=%b", this.min, this.max, this.avg, this.sigma));
 		if (triggerRefOrdinal != null) sb.append(String.format(" triggerRefOrdinal=%d", this.triggerRefOrdinal));
 		if (sumByTriggerRefOrdinal != null) sb.append(String.format(" sumByTriggerRefOrdinal=%d", this.sumByTriggerRefOrdinal));
+		if (sumBySecondaryTriggerRefOrdinal != null) sb.append(String.format(" sumBySecondaryTriggerRefOrdinal=%d", this.sumBySecondaryTriggerRefOrdinal));
 		if (sumTriggerText != null) sb.append(String.format(" sumTriggerText=%s", this.sumTriggerText.replace(GDE.CHAR_BLANK, GDE.CHAR_UNDER_BAR)));
 		if (countByTrigger != null) sb.append(String.format(" countByTrigger=%b", this.countByTrigger));
 		if (integrateByTrigger != null) sb.append(String.format(" integrateByTrigger=%b", this.integrateByTrigger));
